--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "TASO Technical Guides"
+title: "TASO Interactive Technical Guides"
 subtitle: "A collection of interactive TASO resources to enhance your evaluation, data visualisation, and coding practices"
 format: html
 title-block-banner: "#0f2847"
@@ -8,7 +8,7 @@ title-block-banner-color: "white"
 
 ## Introduction
 
-Welcome to the TASO Technical Guide, an interactive resource designed to guide and enhance your evaluation, data visualisation and coding practices. This website contains:
+Welcome to the TASO Interactive Technical Guides, a collection of interactive resources designed to guide and enhance your evaluation, data visualisation and coding practices. This website contains:
 
 ::::::::: {.grid style="background-color: #dbe3f4; padding: 10px"}
 :::: g-col-4
@@ -88,7 +88,7 @@ df <- data.frame(
 You can see the latest changes and the code behind how we built this website using [Quarto](https://quarto.org/) on our [GitHub page](https://github.com/taso-he/technicalguide).
 
 ::: {.callout-note title="Licensing and acknowledgements"}
-**The TASO Technical Guide © 2024 by TASO is licensed under [CC BY-NC 4.0](https://creativecommons.org/licenses/by-nc/4.0/). This means that others are free to share, copy, distribute, and transmit the work, as well as to adapt or build upon it, for non-commercial purposes, as long as appropriate credit is given, a link to the license is provided, and any changes made are indicated.**
+**The TASO Interactive Technical Guides © 2024 by TASO are licensed under [CC BY-NC 4.0](https://creativecommons.org/licenses/by-nc/4.0/). This means that others are free to share, copy, distribute, and transmit the work, as well as to adapt or build upon it, for non-commercial purposes, as long as appropriate credit is given, a link to the license is provided, and any changes made are indicated.**
 
 This website incorporates and adapts elements of the Quarto code from the "Best Practices for Data Visualisation" guide, authored by Andreas Krause, Nicola Rennie and Brian Tarran, and published by the Royal Statistical Society in July 2023. While the specific content from the guide has not been used, [the code structure](https://github.com/royal-statistical-society/datavisguide/blob/main/_quarto.yml) has been valuable in the development of specific functionalities on this site. Their guide is accessible at <https://royal-statistical-society.github.io/datavisguide/> and is licensed under [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/?ref=chooser-v1). We are thankful to the authors and the Royal Statistical Society for sharing their expertise and resources, which have greatly assisted in the technical aspects of this website's construction.
 :::
